Revert "Fix spelling issues in examples (Customer, Architecture, Deposit)"
This reverts commit 5bc5225f542cc922f4753d1d8920af745bb12a78.

--- a/samples/C4Bank/C4Bank.Deposit/C4Bank.Deposit.csproj
+++ b/samples/C4Bank/C4Bank.Deposit/C4Bank.Deposit.csproj
@@ -14,4 +14,8 @@
       <ProjectReference Include="..\..\..\src\C4Sharp\C4Sharp.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="UseCases" />
+    </ItemGroup>
+
 </Project>
